--- a/appium-tests/reports/cucumber-report.xml
+++ b/appium-tests/reports/cucumber-report.xml
@@ -1,6 +1,38 @@
 <?xml version="1.0"?>
-<testsuite failures="0" skipped="0" name="cucumber-js" time="401.894362979" tests="6">
-  <testcase classname="App Navigation" name="Navigate to list detail and back" time="90.430731093">
+<testsuite failures="0" skipped="0" name="cucumber-js" time="412.63484241400005" tests="18">
+  <testcase classname="Delete Vocabulary List" name="Delete a list via long press" time="42.445980498">
+    <system-out><![CDATA[Given the app is launched.................................................passed
+And I am on the home screen...............................................passed
+Given a vocabulary list "To Delete" exists................................passed
+When I long press on the list "To Delete".................................passed
+Then I should see the delete list confirmation dialog.....................passed
+When I confirm the list deletion..........................................passed
+Then I should not see the list "To Delete" on the home screen.............passed]]></system-out>
+  </testcase>
+  <testcase classname="Delete Vocabulary List" name="Cancel list deletion" time="16.306059695">
+    <system-out><![CDATA[Given the app is launched.................................................passed
+And I am on the home screen...............................................passed
+Given a vocabulary list "Keep This" exists................................passed
+When I long press on the list "Keep This".................................passed
+And I cancel the list deletion............................................passed
+Then I should see the list "Keep This" on the home screen.................passed]]></system-out>
+  </testcase>
+  <testcase classname="Empty States" name="Empty home screen shows helpful message" time="14.992104695">
+    <system-out><![CDATA[Given the app is launched.................................................passed
+Given there are no vocabulary lists.......................................passed
+And I am on the home screen...............................................passed
+Then I should see the empty home screen message...........................passed
+And I should see the create list call to action...........................passed]]></system-out>
+  </testcase>
+  <testcase classname="Empty States" name="Empty list detail shows helpful message" time="16.601461797000002">
+    <system-out><![CDATA[Given the app is launched.................................................passed
+Given I am on the home screen.............................................passed
+And a vocabulary list "Empty List" exists.................................passed
+When I click on the list "Empty List".....................................passed
+Then I should see the empty list message..................................passed
+And I should see the add word call to action..............................passed]]></system-out>
+  </testcase>
+  <testcase classname="App Navigation" name="Navigate to list detail and back" time="16.470521493">
     <system-out><![CDATA[Given the app is launched.................................................passed
 And I am on the home screen...............................................passed
 Given a vocabulary list "Navigation Test" exists..........................passed
@@ -9,7 +41,7 @@ Then I should be on the list detail page..................................passed
 When I navigate back......................................................passed
 Then I should be on the home screen.......................................passed]]></system-out>
   </testcase>
-  <testcase classname="App Navigation" name="Navigate to multiple lists" time="149.18847299599997">
+  <testcase classname="App Navigation" name="Navigate to multiple lists" time="26.359675197000005">
     <system-out><![CDATA[Given the app is launched.................................................passed
 And I am on the home screen...............................................passed
 Given a vocabulary list "List One" exists.................................passed
@@ -22,17 +54,63 @@ Then I should be on the list detail page..................................passed
 When I navigate back......................................................passed
 Then I should be on the home screen.......................................passed]]></system-out>
   </testcase>
-  <testcase classname="Smoke Test" name="Launch app and verify home screen" time="27.360232797000002">
+  <testcase classname="Quiz Mode" name="Start a quiz" time="22.731020692">
+    <system-out><![CDATA[Given the app is launched.................................................passed
+And I am on the home screen...............................................passed
+Given a vocabulary list "Quiz List" exists................................passed
+And I click on the list "Quiz List".......................................passed
+And I add a word "test" with translation "테스트"............................passed
+And I navigate back.......................................................passed
+When I start the quiz for list "Quiz List"................................passed
+Then I should be on the quiz screen.......................................passed
+And I should see a word to translate......................................passed]]></system-out>
+  </testcase>
+  <testcase classname="Quiz Mode" name="Answer a question correctly" time="21.606986094999996">
+    <system-out><![CDATA[Given the app is launched.................................................passed
+And I am on the home screen...............................................passed
+Given a vocabulary list "Correct Answer" exists...........................passed
+And I click on the list "Correct Answer"..................................passed
+And I add a word "bonjour" with translation "안녕하세요".......................passed
+And I navigate back.......................................................passed
+When I start the quiz for list "Correct Answer"...........................passed
+And I enter the answer "안녕하세요"............................................passed
+And I submit my answer....................................................passed
+Then I should see correct feedback........................................passed]]></system-out>
+  </testcase>
+  <testcase classname="Quiz Mode" name="Answer a question incorrectly" time="22.953443495">
+    <system-out><![CDATA[Given the app is launched.................................................passed
+And I am on the home screen...............................................passed
+Given a vocabulary list "Wrong Answer" exists.............................passed
+And I click on the list "Wrong Answer"....................................passed
+And I add a word "merci" with translation "감사합니다".........................passed
+And I navigate back.......................................................passed
+When I start the quiz for list "Wrong Answer".............................passed
+And I enter the answer "wrong answer".....................................passed
+And I submit my answer....................................................passed
+Then I should see incorrect feedback......................................passed]]></system-out>
+  </testcase>
+  <testcase classname="Quiz Mode" name="Complete a quiz and see results" time="82.888205498">
+    <system-out><![CDATA[Given the app is launched.................................................passed
+And I am on the home screen...............................................passed
+Given a vocabulary list "Complete Quiz" exists............................passed
+And I click on the list "Complete Quiz"...................................passed
+And I add a word "oui" with translation "네"...............................passed
+And I navigate back.......................................................passed
+When I start the quiz for list "Complete Quiz"............................passed
+And I complete the quiz...................................................passed
+Then I should see the quiz results dialog.................................passed]]></system-out>
+  </testcase>
+  <testcase classname="Smoke Test" name="Launch app and verify home screen" time="6.548507097000001">
     <system-out><![CDATA[Given the app is launched.................................................passed
 And I am on the home screen...............................................passed
 Then the home screen should be displayed..................................passed]]></system-out>
   </testcase>
-  <testcase classname="Vocabulary List Management" name="View home screen" time="25.857928098">
+  <testcase classname="Vocabulary List Management" name="View home screen" time="7.1312186959999995">
     <system-out><![CDATA[Given the app is launched.................................................passed
 And I am on the home screen...............................................passed
 Then I should see the page title "Mes Listes".............................passed]]></system-out>
   </testcase>
-  <testcase classname="Vocabulary List Management" name="Create a new vocabulary list" time="30.548002299">
+  <testcase classname="Vocabulary List Management" name="Create a new vocabulary list" time="8.648064896000001">
     <system-out><![CDATA[Given the app is launched.................................................passed
 And I am on the home screen...............................................passed
 When I click the add list button..........................................passed
@@ -41,12 +119,57 @@ When I enter list name "French Basics"....................................passed
 And I click the create button.............................................passed
 Then I should see the list "French Basics" on the home screen.............passed]]></system-out>
   </testcase>
-  <testcase classname="Vocabulary List Management" name="Cancel creating a list" time="78.50899569600001">
+  <testcase classname="Vocabulary List Management" name="Cancel creating a list" time="15.066495896000001">
     <system-out><![CDATA[Given the app is launched.................................................passed
 And I am on the home screen...............................................passed
 When I click the add list button..........................................passed
 And I enter list name "Temporary List"....................................passed
 And I click the cancel button.............................................passed
 Then I should not see the list "Temporary List" on the home screen........passed]]></system-out>
+  </testcase>
+  <testcase classname="Word Management" name="Add a word to a list" time="19.968162792">
+    <system-out><![CDATA[Given the app is launched.................................................passed
+And I am on the home screen...............................................passed
+Given a vocabulary list "Word Test" exists................................passed
+When I click on the list "Word Test"......................................passed
+Then I should be on the list detail page..................................passed
+When I click the add word button..........................................passed
+Then I should see the add word dialog.....................................passed
+When I enter the French word "bonjour"....................................passed
+And I enter the Korean word "안녕하세요".......................................passed
+And I click the add word confirm button...................................passed
+Then I should see the word "bonjour" in the word list.....................passed]]></system-out>
+  </testcase>
+  <testcase classname="Word Management" name="Cancel adding a word" time="23.311061595">
+    <system-out><![CDATA[Given the app is launched.................................................passed
+And I am on the home screen...............................................passed
+Given a vocabulary list "Cancel Test" exists..............................passed
+When I click on the list "Cancel Test"....................................passed
+And I click the add word button...........................................passed
+And I enter the French word "temporaire"..................................passed
+And I cancel adding the word..............................................passed
+Then I should not see the word "temporaire" in the word list..............passed]]></system-out>
+  </testcase>
+  <testcase classname="Word Management" name="Delete a word from a list" time="27.420514392">
+    <system-out><![CDATA[Given the app is launched.................................................passed
+And I am on the home screen...............................................passed
+Given a vocabulary list "Delete Word Test" exists.........................passed
+And I click on the list "Delete Word Test"................................passed
+And I add a word "supprimer" with translation "삭제"........................passed
+Then I should see the word "supprimer" in the word list...................passed
+When I click the delete button for word "supprimer".......................passed
+Then I should see the delete word confirmation dialog.....................passed
+When I confirm the word deletion..........................................passed
+Then I should not see the word "supprimer" in the word list...............passed]]></system-out>
+  </testcase>
+  <testcase classname="Word Management" name="Cancel word deletion" time="21.185357895000003">
+    <system-out><![CDATA[Given the app is launched.................................................passed
+And I am on the home screen...............................................passed
+Given a vocabulary list "Keep Word Test" exists...........................passed
+And I click on the list "Keep Word Test"..................................passed
+And I add a word "garder" with translation "유지"...........................passed
+When I click the delete button for word "garder"..........................passed
+And I cancel the word deletion............................................passed
+Then I should see the word "garder" in the word list......................passed]]></system-out>
   </testcase>
 </testsuite>
